# trading

./: .env.example  .env.test  .gitignore  README.md  main.py  pyproject.toml
provider/dexscreener/: client.py  errors.py  poller.py  test.py
provider/telegram/: client.py  handlers.py
provider/telegram/model/: models.py
telegram/: client.py  handlers.py
telegram/model/: protocols.py
trading/action/: buy.py  sell.py
trading/bot/: __init__.py  bot.py  builder.py  core.py  event_bus.py  manager.py
trading/model/: event.py  protocols.py  token.py
trading/strategy/: copy.py  sizing.py
trading/strategy/buy/: copy.py
trading/strategy/sell/: stop_loss.py
trading/strategy/utils/: enums.py
trading/utils/: logger.py
